Bug 158276 - Since version 7.5.8.2 (x86_64) bookmarks in LO Writer do not hold alpha sort
Summary: Since version 7.5.8.2 (x86_64) bookmarks in LO Writer do not hold alpha sort
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.8.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Bookmarks
  Show dependency treegraph
 
Reported: 2023-11-19 18:13 UTC by BrianH
Modified: 2024-01-16 22:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BrianH 2023-11-19 18:13:35 UTC
Description:
Since version 7.5.8.2 (x86_64) bookmarks in LO Writer do not hold alpha sort and must be re-sorted each time the document is opened. Annoying extra step when working with multiple docs daily.

Steps to Reproduce:
1.open document with bookmarks in same window as doc
2.Note bookmarks are not alpha sorted
3.Choose alpha sort

Actual Results:
See above - I CAN alpha sort but it should not have to be done each time I open the doc

Expected Results:
that alpha sort would hold going forward day to day


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.8.2 (X86_64) / LibreOffice Community
Build ID: f718d63693263970429a68f568db6046aaa9df01
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 raal 2023-11-21 15:20:50 UTC
I can confirm with Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a91892ec4942fc875820ea02dfbe74e986548142
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

bookmarks are not sorted in navigator.
Comment 2 raal 2023-11-21 15:30:58 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.4.
Adding Cc: to Jim Raykowski ; Could you possibly take a look at this one?
Thanks
 c5b7e2fd15f24c1e85e6d5e799c5d4ef42faf4fe is the first bad commit
commit c5b7e2fd15f24c1e85e6d5e799c5d4ef42faf4fe
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Mar 16 08:59:10 2022 +0100

    source b802cecbc0f57d0ba0d70434cf619a7e91c7393f

131448: tdf#86395 tdf#104253 tdf#147658 tdf#135043 SwNavigator sort enhancement | https://gerrit.libreoffice.org/c/core/+/131448
Comment 3 raal 2023-11-21 15:39:33 UTC
Patch is probably unfinished? See https://bugs.documentfoundation.org/show_bug.cgi?id=86395#c21
Comment 4 Commit Notification 2023-12-13 06:24:04 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bb0a2be91930fbae07657f214b53117b9e8cc204

tdf#158276 tdf#86395 Make alphabetical sort setting persist

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-12-15 08:01:55 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ae8d83c0cca3f721292bceaf358cd03217d5ee39

tdf#158276 tdf#86395 Make alphabetical sort setting persist

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BrianH 2023-12-20 19:12:24 UTC
Thanks for working on this. I find the number of steps to do the daily build process kind of overwhelming and am not familiar with the technical side of it. Can anyone say when this fix will be part of a normal update?
Comment 7 raal 2023-12-20 19:23:48 UTC
(In reply to BrianH from comment #6)
> Thanks for working on this. I find the number of steps to do the daily build
> process kind of overwhelming and am not familiar with the technical side of
> it. Can anyone say when this fix will be part of a normal update?

Hello Brian, you can download daily version here:
http://dev-builds.libreoffice.org/daily/master/
Wait few days to be sure the bugfix is in the build.
Comment 8 BrianH 2024-01-02 14:45:15 UTC
I'm using Windows 10. I've assumed I have to wait until there is(In reply to raal from comment #7)
> (In reply to BrianH from comment #6)
> > Thanks for working on this. I find the number of steps to do the daily build
> > process kind of overwhelming and am not familiar with the technical side of
> > it. Can anyone say when this fix will be part of a normal update?
> 
> Hello Brian, you can download daily version here:
> http://dev-builds.libreoffice.org/daily/master/
> Wait few days to be sure the bugfix is in the build.

Thanks. I'm using Windows 10. I've assumed that I have to wait for a daily version that starts with Win? And that I can't use the recent ones that start with Linux. Is that correct?
Comment 9 raal 2024-01-02 15:00:51 UTC
(In reply to BrianH from comment #8)
> 
> Thanks. I'm using Windows 10. I've assumed that I have to wait for a daily
> version that starts with Win? And that I can't use the recent ones that
> start with Linux. Is that correct?

Hello, 
see https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/current/
there is build from today: 2024-Jan-02 02:21
Comment 10 BrianH 2024-01-02 15:20:40 UTC
(In reply to raal from comment #9)
> (In reply to BrianH from comment #8)
> > 
> > Thanks. I'm using Windows 10. I've assumed that I have to wait for a daily
> > version that starts with Win? And that I can't use the recent ones that
> > start with Linux. Is that correct?
> 
> Hello, 
> see
> https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/current/
> there is build from today: 2024-Jan-02 02:21

Thanks for responding. When I download that link it is a CRDOWNLOAD file - I don't know what to do with that - it doesn't open automatically.
I also looked at the list here:https://dev-builds.libreoffice.org/daily/master/current.html
but I don't know which of those Win files I should use if any.
Sorry to be slow about this.
Comment 12 BrianH 2024-01-02 15:39:21 UTC
(In reply to raal from comment #11)
> https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/current/
> is folder with builds
> Try this one
> https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/current/
> LibreOfficeDev_24.8.0.0.alpha0_Win_x86-64.msi

That generates a series of CRDOWNLOAD files in my downloads folder but nothing beyond that?
Comment 13 BrianH 2024-01-09 17:08:34 UTC Comment hidden (obsolete)
Comment 14 BrianH 2024-01-09 17:12:49 UTC
Any idea when this fix will become part of a "normal" update. I can't seem to figure out how to use the daily build
Comment 15 raal 2024-01-09 18:27:50 UTC
(In reply to BrianH from comment #14)
> Any idea when this fix will become part of a "normal" update. I can't seem
> to figure out how to use the daily build

Just click on the link provided is sufficient. Anyway Whiteboard: target:24.8.0 target:24.2.0.0.beta2 means that this fix is part of 24.2 release (February 2024)
Comment 16 BrianH 2024-01-09 22:34:29 UTC
(In reply to raal from comment #15)
> (In reply to BrianH from comment #14)
> > Any idea when this fix will become part of a "normal" update. I can't seem
> > to figure out how to use the daily build
> 
> Just click on the link provided is sufficient. Anyway Whiteboard:
> target:24.8.0 target:24.2.0.0.beta2 means that this fix is part of 24.2
> release (February 2024)

When I click on that link I get a series of CRDOWNLOAD files. What do I do with those please? If I have to open them what program do I use? Thanks, sorry this is all so unknown for me.
Comment 17 BrianH 2024-01-16 15:05:11 UTC
(In reply to raal from comment #15)
> (In reply to BrianH from comment #14)
> > Any idea when this fix will become part of a "normal" update. I can't seem
> > to figure out how to use the daily build
> 
> Just click on the link provided is sufficient. Anyway Whiteboard:
> target:24.8.0 target:24.2.0.0.beta2 means that this fix is part of 24.2
> release (February 2024)

Please can you point me to any info on how to work with the CRDOWNLOAD files that I get when clicking the link you mentioned?
Comment 18 Jim Raykowski 2024-01-16 22:28:52 UTC
(In reply to BrianH from comment #17)
> Please can you point me to any info on how to work with the CRDOWNLOAD files
> that I get when clicking the link you mentioned?
Doing a search for CRDOWNLOAD I found this:

A CRDOWNLOAD file is a partially downloaded file created by Google Chrome, Microsoft Edge, and Chromium web browsers that stores the contents of a file while the browser downloads it.

Seems the download isn't completing for you.

HTH